--- a/FNO_image_classification(MNIST).ipynb
+++ b/FNO_image_classification(MNIST).ipynb
@@ -11,7 +11,7 @@
     "## Backend : Tensorflow / Keras\n",
     "## Datasets : Tensorflow.keras.datasets MNIST\n",
     "\n",
-    "### GPU : Tesla-SXM2 x 8\n",
+    "### GPU : Tesla V100-SXM2 x 8\n",
     "\n",
     "In this notebook we will introduce the brief theory behind the Fourier Neural Operators and use them to solve a data-driven image classification problem. The theory is adopted from the [paper](https://arxiv.org/pdf/2010.08895.pdf) by Zongyi Li et al. \n",
     "\n",
