--- a/FNO_image_classification(MNIST).ipynb
+++ b/FNO_image_classification(MNIST).ipynb
@@ -454,7 +454,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Clearing the unnecessary memory again "
+    "## Clearing the unnecessary memory again (Not necessary)"
    ]
   },
   {
