--- a/FNO_IC(Cifar10).ipynb
+++ b/FNO_IC(Cifar10).ipynb
@@ -748,7 +748,7 @@
     "\n",
     "[Author's github site](https://github.com/KozakHou)\n",
     "\n",
-    "[Zhongyi Li 's github site](https://github.com/zongyi-li/fourier_neural_operator)"
+    "[Zongyi Li 's github site](https://github.com/zongyi-li/fourier_neural_operator)"
    ]
   },
   {
