--- a/FNO_IC(MNIST).ipynb
+++ b/FNO_IC(MNIST).ipynb
@@ -235,7 +235,7 @@
     "\n",
     "***First Part***\n",
     "\n",
-    "The first step we should implement is raising the dimension throuh 1 x 1 kernel's convolution, which often bein regarded as encoder layer. \n",
+    "The first step we should implement is raising the dimension throuh 1 x 1 kernel's convolution, which often been regarded as encoder layer. \n",
     "\n",
     "$$a(x) \\rightarrow P $$\n",
     "\n",
